<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/context1item1"
        android:enabled="true"
        android:orderInCategory="1"
        android:title="@string/usd"
        android:visible="true" />
    <item
        android:id="@+id/context1item2"
        android:enabled="true"
        android:orderInCategory="2"
        android:title="@string/eur"
        android:visible="true" />
    <item
        android:id="@+id/context1item3"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/aud"
        android:visible="true" />
    <item
        android:id="@+id/context1item4"
        android:enabled="true"
        android:orderInCategory="4"
        android:title="@string/byn"
        android:visible="true" />
    <item
        android:id="@+id/context1item5"
        android:enabled="true"
        android:orderInCategory="5"
        android:title="@string/bgn"
        android:visible="true" />
    <item
        android:id="@+id/context1item6"
        android:enabled="true"
        android:orderInCategory="6"
        android:title="@string/hkd"
        android:visible="true" />
    <item
        android:id="@+id/context1item7"
        android:enabled="true"
        android:orderInCategory="7"
        android:title="@string/dkk"
        android:visible="true" />
    <item
        android:id="@+id/context1item8"
        android:enabled="true"
        android:orderInCategory="8"
        android:title="@string/uah"
        android:visible="true" />
</menu>